--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^5.1.0",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
-    "resend": "^6.5.2"
+    "resend": "^6.5.2",
+    "sib-api-v3-sdk": "^8.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
