--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mailtrap": "^4.4.0",
     "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "resend": "^6.5.2",
